--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aswanna"
         tools:targetApi="31">
-
         <activity
-            android:name=".Activities.botMain"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|adjustResize"
+            android:name=".Activities.SearchResultInvestor"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.testaa"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.InvestorPostView"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.InvestorHome"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            ><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
-        -------------------------------------------------
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Activities.MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
