--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,12 @@ dependencies {
     //rounded image view
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
+    //
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+
+
 
 
 }
