--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.Aswanna"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".userLisst"
+            android:exported="false" />
+        <activity
+            android:name=".Profile_View"
+            android:exported="false" />
+        <activity
             android:name=".Farmer_Home_Page"
             android:exported="false" />
         <activity
