--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,13 @@
             android:exported="false" />
 
         <activity
-
-            android:name=".Farmer_Home_Page"
+            android:name=".userLisst"
             android:exported="false" />
+
+        <activity
+            android:name=".Profile_View"
+            android:exported="false" />
+
 
 
      
@@ -75,22 +79,12 @@
             android:exported="false" />
         <activity
             android:name=".Activities.InvestorHome"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="false" />
 
          <activity
 
             android:name=".Activities.SignUpActivity"
             android:exported="false" />
-        <activity
-            android:name=".Activities.MainActivity"
-            android:exported="true" />
 
         <service
             android:name=".firebase.MessageService"
