--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -19,31 +18,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aswanna"
         tools:targetApi="31">
-
-
         <activity
-            android:name=".Activities.FarmerProposalList"
+            android:name=".Activities.NotificationManagement"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.InvestorHome"
             android:exported="false" />
         <activity
             android:name=".Activities.ProposalAdd"
             android:exported="false" />
-
         <activity
             android:name=".userLisst"
             android:exported="false" />
-
         <activity
             android:name=".Profile_View"
             android:exported="false" />
-
-
-
-     
-
-          <activity
-
+        <activity
             android:name=".Activities.SignInActivity"
-
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,8 +46,7 @@
             </intent-filter>
         </activity>
 
-
-       <service
+        <service
             android:name=".SendNotificationPack.MyFireBaseMessagingService"
             android:enabled="true"
             android:exported="true">
@@ -62,10 +55,10 @@
             </intent-filter>
         </service>
 
-         <activity
+        <activity
             android:name=".Farmer_Home_Page"
             android:exported="false" />
-          <activity
+        <activity
             android:name=".Activities.InvestorMyProjects"
             android:exported="false" />
         <activity
@@ -78,11 +71,9 @@
             android:name=".Activities.InvestorPostView"
             android:exported="false" />
         <activity
-            android:name=".Activities.InvestorHome"
+            android:name=".Activities.FarmerProposalList"
             android:exported="false" />
-
-         <activity
-
+        <activity
             android:name=".Activities.SignUpActivity"
             android:exported="false" />
 
@@ -93,7 +84,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
