--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,8 +58,10 @@
         <service
             android:name=".SendNotificationPack.MyFireBaseMessagingService"
             android:enabled="true"
-            android:exported="false">
-
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
         </service>
 
         <activity
@@ -94,13 +96,7 @@
               android:name=".Activities.SignUpActivity"
             android:exported="false" />
 
-        <service
-            android:name=".firebase.MessageService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
+
     </application>
 
 </manifest>
