--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -19,31 +18,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aswanna"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".Activities.Farmer_Request_View"
+            android:exported="false" />
+        <activity
+            android:name=".Massage_Main_Activity"
+            android:exported="false" />
         <activity
             android:name=".Activities.FarmerProposalList"
             android:exported="false" />
         <activity
             android:name=".Activities.ProposalAdd"
             android:exported="false" />
-
         <activity
             android:name=".userLisst"
             android:exported="false" />
-
         <activity
             android:name=".Profile_View"
             android:exported="false" />
-
-
-
-     
-
-          <activity
-
+        <activity
+            android:name=".Activities.ChatActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".Activities.SignInActivity"
-
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,8 +50,7 @@
             </intent-filter>
         </activity>
 
-
-       <service
+        <service
             android:name=".SendNotificationPack.MyFireBaseMessagingService"
             android:enabled="true"
             android:exported="true">
@@ -62,10 +59,13 @@
             </intent-filter>
         </service>
 
-         <activity
+        <activity
             android:name=".Farmer_Home_Page"
             android:exported="false" />
-          <activity
+        <activity
+            android:name=".Activities.ChatActivity_FarmerSide"
+            android:exported="false" />
+        <activity
             android:name=".Activities.InvestorMyProjects"
             android:exported="false" />
         <activity
@@ -80,20 +80,20 @@
         <activity
             android:name=".Activities.InvestorHome"
             android:exported="false" />
-
-         <activity
-
+        <activity
+            android:name=".Activities.ChatActivity_previousOne"
+            android:exported="false" />
+        <activity
             android:name=".Activities.SignUpActivity"
             android:exported="false" />
 
-        <service
-            android:name=".firebase.MessageService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
+<!--        <service-->
+<!--            android:name=".firebase.MessageService"-->
+<!--            android:exported="false">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
     </application>
 
 </manifest>
