--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.Aswanna"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.my_projects_Farmer_side"
+            android:exported="false" />
+        <activity
             android:name=".Activities.Farmer_Request_View"
             android:exported="false" />
         <activity
@@ -86,14 +89,6 @@
         <activity
             android:name=".Activities.SignUpActivity"
             android:exported="false" />
-
-<!--        <service-->
-<!--            android:name=".firebase.MessageService"-->
-<!--            android:exported="false">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
-<!--            </intent-filter>-->
-<!--        </service>-->
     </application>
 
 </manifest>
